Added links at the bottom, added about page- need to atyle about page-

--- a/style.css
+++ b/style.css
@@ -59,3 +59,20 @@ p{
 
 }
 
+.navbar {
+  text-decoration: none;
+  color: aliceblue;
+  position: fixed;
+  text-align: center;
+  bottom: 0;
+  width: 100%;
+  font-size: 0.75em;
+
+}
+
+a:link, a:visited {
+  color: aliceblue;
+}
+
+
+
