--- a/style.css
+++ b/style.css
@@ -31,7 +31,19 @@ p{
 
 .se{
   text-align: center;
-  padding-top: 5%;
+
+}
+
+form {
+  padding-top: 8%;
+}
+
+@media (max-width: 800px) {
+  
+  form {
+    padding-top: 20%;
+  }
+
 
 }
 
@@ -90,48 +102,27 @@ a:link, a:visited {
 
 }
 
-ul {
-  list-style-type: none;
-  margin: 0;
-  padding: 0;
-  overflow: hidden;
-  background-color: rgb(53, 36, 67);
-  position: fixed;
-  top: 0;
-  width: 100%;
+#map { height: 180px; }
 
-}
+.w3-theme-l5 {color:#000 !important; background-color:#f6f4f9 !important}
+.w3-theme-l4 {color:#000 !important; background-color:#e0dbea !important}
+.w3-theme-l3 {color:#000 !important; background-color:#c1b8d4 !important}
+.w3-theme-l2 {color:#fff !important; background-color:#a294bf !important}
+.w3-theme-l1 {color:#fff !important; background-color:#8370a9 !important}
+.w3-theme-d1 {color:#fff !important; background-color:#5d4c7e !important}
+.w3-theme-d2 {color:#fff !important; background-color:#524370 !important}
+.w3-theme-d3 {color:#fff !important; background-color:#483b62 !important}
+.w3-theme-d4 {color:#fff !important; background-color:#3e3254 !important}
+.w3-theme-d5 {color:#fff !important; background-color:#332a46 !important}
 
-li {
-  float: left;
-}
+.w3-theme-light {color:#000 !important; background-color:#f6f4f9 !important}
+.w3-theme-dark {color:#fff !important; background-color:#332a46 !important}
+.w3-theme-action {color:#fff !important; background-color:#332a46 !important}
 
-li a {
-  display: block;
-  color: white;
-  text-align: center;
-  padding: 14px 16px;
-  text-decoration: none;
-}
+.w3-theme {color:#fff !important; background-color:#67548c !important}
+.w3-text-theme {color:#67548c !important}
+.w3-border-theme {border-color:#67548c !important}
 
-li a:hover:not(.active) {
-  background-color: #111;
-}
-
-.active {
-  background-color: #04AA6D;
-}
-
-.navSearch {
-  background:rgba(50, 50, 50, 0.2);
-  padding: 6px 15% 6px 6px;
-  margin-top: 8px;
-  border: none;
-  float: right;
-  color: white;
-  
-}
-
-
-
-
+.w3-hover-theme:hover {color:#fff !important; background-color:#67548c !important}
+.w3-hover-text-theme:hover {color:#67548c !important}
+.w3-hover-border-theme:hover {border-color:#67548c !important}
