--- a/style.css
+++ b/style.css
@@ -34,8 +34,6 @@ body {
   background-color: #715C8C;
   margin: 0;
   word-wrap: break-word;
-
-
 }
 
 html, body {
@@ -78,10 +76,8 @@ p{
 }
 
 .bigSearch {
-  padding-top: 8%;
+  padding-top: 5%;
 }
-
-
 
 @media (max-width: 800px) {
   
@@ -90,6 +86,68 @@ p{
   }
 
 
+}
+@media (max-width: 1599px) and (min-width: 801px) {
+  
+  .bigSearch {
+    padding-top: 10%;
+  }
+
+
+}
+@media (max-width: 2000px) and (min-width: 1600px) {
+  
+  .bigSearch {
+    padding-top: 8%;
+  }
+
+
+}
+
+#inputStuff {
+  width: 100%;
+}
+
+#locationInput {
+  width: 50%;
+}
+
+#destinationInput {
+  width: 50%;
+}
+
+
+#locationLabel, #destinationLabel {
+  color: white;
+  font-family: Poppins;
+  font-size:2vw;
+
+}
+
+#LDSubmitButton{
+  margin: 1%;
+  width: 100%;
+
+}
+
+@media (max-width: 800px) {
+#LDSubmitButton{
+  margin: 2%;
+  width: 150%;
+  color: yellow;
+}
+}
+
+#LDSubmitButtonDiv{
+  width:100%;
+}
+@media (max-width: 800px) {
+#locationLabel, #destinationLabel {
+  color: white;
+  font-family: Poppins;
+  font-size:6vw;
+
+}
 }
 
 #dataTitle {
@@ -108,6 +166,34 @@ p{
 
 #livesearch{
   font-family: Poppins;
+}
+@media (max-width: 800px) {
+
+#loadImage{
+  width: 100%;
+  margin: auto;
+
+
+}
+
+#loadImage-wrap{
+  width: 100%;
+  margin: auto;
+
+}
+}
+
+#loadImage{
+  width: 100%;
+  margin: auto;
+
+
+}
+
+#loadImage-wrap{
+  width: 100%;
+  margin: auto;
+
 }
 
 #results{
@@ -142,6 +228,18 @@ a:link, a:visited {
 
 }
 
+#LDSubmitButton{
+  width: 10%;
+}
+
+#locationID{
+  width: 100%;
+}
+
+#destinationID{
+  width: 100%;
+
+}
 .aboutP {
   width: 75%;
   margin: auto;
@@ -164,7 +262,6 @@ a:link, a:visited {
 #mySidebar {
   color: rgb(0, 0, 0)
 }
-#map { height: 180px; }
 
 .doc {
   width: 50%;
